--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
         <ul class="nav nav-pills pull-right">
           <li class="active"><a ng-href="#">Home</a></li>
         </ul>
-        <h3 class="text-muted">Snap</h3>
+        <h3 class="text-muted">Coding excercise</h3>
       </div>
 
       <div ng-view=""></div>
@@ -52,6 +52,7 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/underscore/underscore.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
