--- a/test.html
+++ b/test.html
@@ -18,7 +18,7 @@
 <script data-require="angular.js" data-semver="1.4.0-rc.2" src="https://code.angularjs.org/1.4.0-rc.2/angular.js"></script>
 <script data-require="angular-mocks" data-semver="1.4.0-rc.2" src="https://code.angularjs.org/1.4.0-rc.2/angular-mocks.js"></script>
 <script src="app/scripts/app.js"></script>
-<script src="app/scripts/main.js"></script>
+<script src="app/scripts/controllers/mainctrl.js"></script>
 <script src="test/spec/controllers/main.js"></script>
 
 
