--- a/app/index.html
+++ b/app/index.html
@@ -18,9 +18,10 @@
 <!-- Add your site or application content here -->
 <div class="container">
   <div class="header">
-     <h3 class="text-muted">Coding excercise</h3>
+     <h3 class="text-muted">Snap</h3>
   </div>
-  <div ng-view=""></div>
+
+  <section ui-view></section>
 
 </div>
 
@@ -34,6 +35,7 @@
 
 <!-- build:js(.) scripts/vendor.js -->
 <!-- bower:js -->
+
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-animate/angular-animate.js"></script>
 <script src="bower_components/angular-cookies/angular-cookies.js"></script>
@@ -44,13 +46,17 @@
 <script src="bower_components/underscore/underscore.js"></script>
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+
 
 <!-- endbower -->
 <!-- endbuild -->
 
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
 <script src="scripts/app.js"></script>
-<script src="scripts/main.js"></script>
+<script src="scripts/controllers/mainctrl.js"></script>
+<script src="scripts/controllers/playerctrl.js"></script>
+<script src="scripts/controllers/cpuctrl.js"></script>
 
 
 
