--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
 <!-- Add your site or application content here -->
 <div class="container">
   <div class="header">
-     <h3 class="text-muted">Snap</h3>
+    <h3 class="text-muted">Snap</h3>
   </div>
 
   <section ui-view></section>
@@ -57,6 +57,7 @@
 <script src="scripts/controllers/mainctrl.js"></script>
 <script src="scripts/controllers/playerctrl.js"></script>
 <script src="scripts/controllers/cpuctrl.js"></script>
+<script src="scripts/controllers/snap.js"></script>
 
 
 
