cancel this version

--- a/app/index.html
+++ b/app/index.html
@@ -58,7 +58,7 @@
 <script src="scripts/controllers/cpuctrl.js"></script>
 <script src="scripts/controllers/snapctrl.js"></script>
 <script src="scripts/controllers/gameoverctrl.js"></script>
-
+<script src="scripts/controllers/testcontroller.js"></script>
 
 
 
